--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "dependencies": {
     "core-js": "^3.4.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
